# WEB_HW_9

./: pyproject.toml
soup/: authors.json  parsedata.py  seed_to_db.py
soup/source/: config.ini  connect.py  models.py
