[tool.poetry]
name = "web-hw-9"
version = "0.1.0"
description = ""
authors = ["rattlingmars8 <rattlingmars8@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_9"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
